# Limonata

./: .gitignore  README.md  limonata_firmware.ino  main.py  pyproject.toml  repopackpy-output.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
FCLab_alpha/: FCLab_alpha.ino  NOTE.md
Limonata_alpha/: Limonata_alpha.ino  updateStatus.ino
api/: limonata_firmware.ino
docs/: README.md  conf.py  index.rst
docs/source/: limonata.actuators.rst  limonata.control_algorithms.advanced.rst  limonata.control_algorithms.machine_learning.rst  limonata.control_algorithms.rst  limonata.control_algorithms.state_estimation.rst  limonata.control_algorithms.supervisory.rst  limonata.rst  limonata.safety.rst  limonata.sensors.rst  modules.rst
fclab/: NOTE.md  VocCommChannel.py  __init__.py  __main__.py  clock.py  experiment.py  fclab copy.py  fclab.py  gui.py  historian.py  labtime.py  pid.py  version.py
firmware/: firmware.ino  limonata_firmware.ino
limonata/: Notes.md  __init__.py  __main__.py  data_logging.py  experiment.py  gui.py  historian.py  labtime.py  limonata.py  reactor.py  timer.py  utils.py  version.py
limonata/actuators/: agitators.py  base.py  heaters.py  pumps.py  valves.py
limonata/reactor/: limonata.py  reactor.py
limonata/sensors/: base.py  temperature.py
limonata_hardware/: Hardware List.txt
tests/: test_pid.py  test_reactor.py
