[tool.poetry]
name = "limonata"
version = "0.1.0"
description = "A modular reactor and control system for prototyping chemical processes."
authors = ["Ross Lee <ross_j_lee@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pyserial = "^3.5"
requests = "^2.32.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.0"
mypy = "^1.12.0"
pytest-cov = "^5.0.0"
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
